Fix spokenText overflow

--- a/dictie/src/App.css
+++ b/dictie/src/App.css
@@ -82,7 +82,7 @@ button:hover{
   margin: 0 0;
 }
 .h2-title {
-  height: 50px;
+
   margin-bottom: 0;
 }
 
