--- a/dictie/src/index.css
+++ b/dictie/src/index.css
@@ -34,11 +34,18 @@ button{
   h1{
     font-size: 2.5rem;
   }
+  h2{
+    font-size: 16px;
+  }
+  h3{
+    font-size:14px;
+  }
 }
 @media (max-width:780px) {
   h1{
     font-size: 2rem;
   }
+
 }
 @media (max-width:500px) {
   h1{
